--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 }
 
 .nameBox {
-  box-shadow: 0 0 0 1px rgb(42, 41, 41);
+  /* box-shadow: 0 0 0 1px rgb(42, 41, 41); */
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,7 @@
   text-align: center;
   font-family: 'Inter', sans-serif;
   margin-top: 17vh;
-  margin-bottom: 27vh;
+  margin-bottom: 37vh;
 }
 
 
